src/objects/Apttus_Config2__BatchJob__c.object
<CustomObject>
    <description>Represents an individual batch job</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the job is active</description>
        <inlineHelpText>Indicates whether the job is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CalculationPeriod__c</fullName>
        <description>The period for which the rollup or rebate calculation needs to be run.Only input records that fall within the specified period will be selected for processing.</description>
        <inlineHelpText>The period for which the rollup or rebate calculation needs to be run.Only input records that fall within the specified period will be selected for processing.</inlineHelpText>
        <label>Calculation Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default Period</fullName>
                    <default>true</default>
                    <label>Default Period</label>
                </value>
                <value>
                    <fullName>Current Month</fullName>
                </value>
                <value>
                    <fullName>Current Quarter</fullName>
                </value>
                <value>
                    <fullName>Current Half Year</fullName>
                </value>
                <value>
                    <fullName>Current Year</fullName>
                </value>
                <value>
                    <fullName>Fixed Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Criteria__c</fullName>
        <description>The additional criteria used to select the input records for processing.</description>
        <inlineHelpText>The additional criteria used to select the input records for processing.</inlineHelpText>
        <label>Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndTime__c</fullName>
        <description>The job end time</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Exception__c</fullName>
        <description>The exception reported by the job</description>
        <inlineHelpText>The exception reported by the job</inlineHelpText>
        <label>Exception</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InputAgreementIds__c</fullName>
        <description>A comma separated list of rebate agreement ids provided as input for the rebate calculation job</description>
        <inlineHelpText>A comma separated list of rebate agreement ids provided as input for the rebate calculation job</inlineHelpText>
        <label>Input Agreements</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InputBusinessObject__c</fullName>
        <description>The business object which provides the context for the input filter</description>
        <inlineHelpText>The business object which provides the context for the input filter</inlineHelpText>
        <label>Input Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus_Config2__Order__c</fullName>
                    <default>true</default>
                    <label>Apttus_Config2__Order__c</label>
                </value>
                <value>
                    <fullName>Apttus_Config2__OrderLineItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InputRollupOrRebateIds__c</fullName>
        <description>A comma separated list of rollup or rebate ids provided as input for the rollup/rebate calculation job</description>
        <inlineHelpText>A comma separated list of rollup or rebate ids provided as input for the rollup/rebate calculation job</inlineHelpText>
        <label>Input Rollups Or Rebates</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__JobId__c</fullName>
        <description>ID of the apex job</description>
        <label>Job Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__JobPriority__c</fullName>
        <defaultValue>5</defaultValue>
        <description>The job priority</description>
        <inlineHelpText>The job priority</inlineHelpText>
        <label>Job Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__JobRecurrenceFrequencyValue__c</fullName>
        <description>Indicates how frequently recurring jobs should run. e.g. Every 6 hours.</description>
        <inlineHelpText>Indicates how frequently recurring jobs should run. e.g. Every 6 hours.</inlineHelpText>
        <label>Job Recurrence Frequency Value</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__JobRecurrenceFrequency__c</fullName>
        <description>The job recurrence frequency. For recurring jobs, this specifies how often the job should run</description>
        <inlineHelpText>The job recurrence frequency. For recurring jobs, this specifies how often the job should run</inlineHelpText>
        <label>Job Recurrence Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__JobRecurrenceType__c</fullName>
        <description>The job recurrence type. Indicates whether the job needs to execute one time or on a recurring basis.</description>
        <inlineHelpText>The job recurrence type. Indicates whether the job needs to execute one time or on a recurring basis.</inlineHelpText>
        <label>Job Recurrence Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__JobSpec__c</fullName>
        <description>The job specification</description>
        <label>Job Spec</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__JobStep__c</fullName>
        <description>The job step</description>
        <label>Job Step</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__JobType__c</fullName>
        <description>The job type</description>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hierarchy View Update</fullName>
                </value>
                <value>
                    <fullName>Hierarchy View Delete</fullName>
                </value>
                <value>
                    <fullName>Criteria Update</fullName>
                </value>
                <value>
                    <fullName>Rollup Update</fullName>
                    <default>true</default>
                    <label>Rollup Update</label>
                </value>
                <value>
                    <fullName>Rebate Calculation</fullName>
                </value>
                <value>
                    <fullName>Loyalty Point Calculation</fullName>
                </value>
                <value>
                    <fullName>Loyalty Cycle Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NextRunDate__c</fullName>
        <defaultValue>DATETIMEVALUE(&apos;2000-01-01 00:00:00&apos;)</defaultValue>
        <description>Indicates the date/time when the job would run next</description>
        <inlineHelpText>Indicates the date/time when the job would run next</inlineHelpText>
        <label>Next Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The fixed end date up to which the input records will be considered for rollup or rebate calculation. Only applicable for fixed calculation period.</description>
        <inlineHelpText>The fixed end date up to which the input records will be considered for rollup or rebate calculation. Only applicable for fixed calculation period.</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodSource__c</fullName>
        <description>Indicates the source field in the input business object which determines the period</description>
        <inlineHelpText>Indicates the source field in the input business object which determines the period</inlineHelpText>
        <label>Period Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The fixed start date from which the input records  will be considered for rollup or rebate calculation. Only applicable for fixed calculation period.</description>
        <inlineHelpText>The fixed start date from which the input records  will be considered for rollup or rebate calculation. Only applicable for fixed calculation period.</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RecreateOutputData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether existing rollup or rebate records for the period will be deleted and recreated. If not enabled, existing records would be updated and new records would get created if they did not already exist.</description>
        <inlineHelpText>Indicates whether existing rollup or rebate records for the period will be deleted and recreated. If not enabled, existing records would be updated and new records would get created if they did not already exist.</inlineHelpText>
        <label>Recreate Output Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RunDayOfMonth__c</fullName>
        <description>The run day of month. Specific Day of Month, End of Month, etc when recurring monthly jobs should run.</description>
        <inlineHelpText>The run day of month. Specific Day of Month, End of Month, etc when recurring monthly jobs should run.</inlineHelpText>
        <label>Run Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st of the Month</fullName>
                </value>
                <value>
                    <fullName>2nd of the Month</fullName>
                </value>
                <value>
                    <fullName>3rd of the Month</fullName>
                </value>
                <value>
                    <fullName>4th of the Month</fullName>
                </value>
                <value>
                    <fullName>5th of the Month</fullName>
                </value>
                <value>
                    <fullName>6th of the Month</fullName>
                </value>
                <value>
                    <fullName>7th of the Month</fullName>
                </value>
                <value>
                    <fullName>8th of the Month</fullName>
                </value>
                <value>
                    <fullName>9th of the Month</fullName>
                </value>
                <value>
                    <fullName>10th of the Month</fullName>
                </value>
                <value>
                    <fullName>11th of the Month</fullName>
                </value>
                <value>
                    <fullName>12th of the Month</fullName>
                </value>
                <value>
                    <fullName>13th of the Month</fullName>
                </value>
                <value>
                    <fullName>14th of the Month</fullName>
                </value>
                <value>
                    <fullName>15th of the Month</fullName>
                </value>
                <value>
                    <fullName>16th of the Month</fullName>
                </value>
                <value>
                    <fullName>17th of the Month</fullName>
                </value>
                <value>
                    <fullName>18th of the Month</fullName>
                </value>
                <value>
                    <fullName>19th of the Month</fullName>
                </value>
                <value>
                    <fullName>20th of the Month</fullName>
                </value>
                <value>
                    <fullName>21st of the Month</fullName>
                </value>
                <value>
                    <fullName>22nd of the Month</fullName>
                </value>
                <value>
                    <fullName>23rd of the Month</fullName>
                </value>
                <value>
                    <fullName>24th of the Month</fullName>
                </value>
                <value>
                    <fullName>25th of the Month</fullName>
                </value>
                <value>
                    <fullName>26th of the Month</fullName>
                </value>
                <value>
                    <fullName>27th of the Month</fullName>
                </value>
                <value>
                    <fullName>28th of the Month</fullName>
                </value>
                <value>
                    <fullName>29th of the Month</fullName>
                </value>
                <value>
                    <fullName>30th of the Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RunDayOfWeek__c</fullName>
        <description>The run day of week. Specific Day of Week when recurring weekly jobs should run.</description>
        <inlineHelpText>The run day of week. Specific Day of Week when recurring weekly jobs should run.</inlineHelpText>
        <label>Run Day Of Week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Day of the Week</fullName>
                </value>
                <value>
                    <fullName>2nd Day of the Week</fullName>
                </value>
                <value>
                    <fullName>3rd Day of the Week</fullName>
                </value>
                <value>
                    <fullName>4th Day of the Week</fullName>
                </value>
                <value>
                    <fullName>5th Day of the Week</fullName>
                </value>
                <value>
                    <fullName>6th Day of the Week</fullName>
                </value>
                <value>
                    <fullName>7th Day of the Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartTime__c</fullName>
        <description>The job start time</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                    <default>true</default>
                    <label>Ready</label>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Batch Job (CPQ)</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>Apttus_Config2__JobId__c</columns>
        <columns>NAME</columns>
        <columns>Apttus_Config2__JobType__c</columns>
        <columns>Apttus_Config2__JobStep__c</columns>
        <columns>Apttus_Config2__Status__c</columns>
        <columns>Apttus_Config2__JobSpec__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Jobs (CPQ)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>